--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_URL=https://api.openweathermap.org/data/2.5
-REACT_APP_API_KEY=adc7cc7d2759376ca5184f28622c81a0
+REACT_APP_API_KEY=
 
 REACT_APP_LATAM_URL=https://latam-challenge-2.deta.dev/api/v1
